2001-02-06  Dan Espen  <dane@mk.telcordia.com>

	* AUTHORS: Incorporate change from Dan Astoorian.

2001-02-05  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	* acinclude.m4:
	Display a problem description near every "no" in configure.

2001-02-04  Dan Espen  <dane@mk.telcordia.com>

	* tests/purify/README: Update.

	* tests/purify/purify.read: Remove random action testes.

	* tests/purify/purify.fvwm2rc: Finally, all the tests are in man page
	order.  Missing or inadequate tests are documented with a comment.

2001-02-03  Mikhael Goikhman  <migo@homemail.com>

	* sample.fvwmrc/system.fvwm2rc-sample-95:
	changes inspired by the Lorenz Minder's patch

2001-02-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (get_transientfor_fvwmwindow):
	* fvwm/add_window.c (setup_layer):
	workaround for windows that are their own transients %-\

	* fvwm/events.c (HandleConfigureRequest):
	shaded applications cannot move their windows anymore. this helps with
	jumping xv windows

	* fvwm/builtins.c (DestroyDecor):
	* fvwm/builtins.c (ChangeDecor):
	fixed changing the decor of a window

	* fvwm/add_window.c (setup_style_and_decor):
	only update the decor if none is selected yet

	* fvwm/bindings.c (ParseBinding):
	Binding mouse button '0' enabled title buttons also

2001-01-28  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	* INSTALL.fvwm:
	* NEWS:
	New configure option --disable-package-subdirs.
	Show the instalation directories in configure.

2001-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (test_fit):
	* libs/defaults.h (PLACEMENT_AVOID_BELOW):
	lower avoidance factor for windows on lower layers

	* fvwm/icons.c (AutoPlaceIcon):
	* fvwm/style.c (ProcessNewStyle):
	new icon box option "none" to disable all icon boxes, including the
	default box

	* fvwm/add_window.c (setup_icon_boxes):
	fixed icon box count that could lead to a core dump with multiple icon
	boxes

	* fvwm/style.c (merge_styles):
	fixed IconBox style without arguments