@@ -2,6 +2,9 @@ To find out what should go in this file, see "Information For
 Maintainers of GNU Software" (maintain.texi), the section called
 "Recording Changes".
 
+Lorenz Minder:
+Patches for fvwm-setup95 and safestrdup.
+
 Dan Astoorian:
 Wrote extras/fvwmperl, before X11::Fvwm (available via CPAN) made it
 obsolete.
