@@ -23,3 +23,4 @@
 char *safemalloc(int length);
 char *safecalloc(int num, int length);
 char *saferealloc(char *ptr, int length);
+char *safestrdup(const char *s);
